Add Lombok dependency in Pom.xml